--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="row">
                     <div class="col-lg-1 text-center">
                         <!-- logo -->
-                        <a href="./index.html" class="site-logo">
+                        <a href="https://gacn-mosravo.netlify.app" class="site-logo">
                             <img src="img/GACN-LOGO.png" alt="">
                         </a>
                     </div>
@@ -83,7 +83,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarsExample09">
                     <ul class="nav-item">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li class="active"><a href="https://gacn-mosravo.netlify.app">Home</a></li>
                         <li class="nav-item dropdown">
                             <a class="dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">The Company</a>
